# swing-trade-b3

./: .coverage  .coveragerc  .editorconfig  .env  .env.example  .gitattributes  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  Agents.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MILESTONES_ISSUES.csv  Makefile  README.md  SECURITY.md  SUPPORT.md  TECH_STACK.md  codecov.yml  coverage.xml  gen-agents.ps1  gitlab_rsa  gitlab_rsa.pub  pyproject.toml  requirements.txt  sonar-project.properties
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug_report.md  codex-task.yml  feature.md  feature_request.md
.github/workflows/: auto-rename-branch.yml  branch-name.yml  ci.yml  codeql.yml  release-please.yml  rename-codex-branch.yml  update-roadmap.yml
app/: main.py
app/routers/: health.py
data/processed/: PETR4.parquet
docs/: M1_subissues_atomic.md  M2_subissues_atomic.md  MILESTONES_ISSUES.md  TECH_STACK.md  ci-status-checks.md  ci-troubleshooting.md  codex-execution-modes.md  data-connector-spec.md  data-schema.md  git-flow.md  markdownlint.md  summary-example.json  testing.md
docs/releases/: issue-1.md  issue-2.md  m1-summary.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md
scripts/: export-roadmap.ps1
src/app/: __init__.py  __main__.py  cli.py  persistence.py  processing.py
src/app/connector/: __init__.py  b3.py
src/swing_trade_b3/: __init__.py  __main__.py  cli.py
src/swing_trade_b3/adapters/connectors/market_data/: b3_adapter.py  composite_provider.py  yfinance_adapter.py
src/swing_trade_b3/adapters/persistence/: repositories.py
src/swing_trade_b3/api/: app.py
src/swing_trade_b3/cli/: main.py
src/swing_trade_b3/domain/: ports.py
src/swing_trade_b3/services/: signals.py  throttling.py
swing_trade/: __init__.py  position_sizing.py  signals.py
tests/: __init__.py  test_api_health.py  test_api_root.py  test_cli_module.py  test_composite_provider.py  test_connector_b3.py  test_connector_parser.py  test_data_cleaning.py  test_health.py  test_main_cli.py  test_metrics.py  test_persistence_parquet.py  test_position_sizing.py  test_processing_and_persistence.py  test_smoke.py  test_throttle.py  test_trading.py  test_version.py  test_yfinance_adapter.py  tmp_view.txt
