[tool.poetry]
name = "swing-trade-b3"
version = "0.5.1"
description = "Ferramentas e automações para swing trade na B3"
authors = ["Leonardo Trindade <leotavo@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/leotavo/swing-trade-b3"
packages = [
  { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
requests = "^2.32.3"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
black = "^24.8.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
pre-commit = "^3.7.1"
ipykernel = "^6.30.1"

[tool.poetry.scripts]
lint = "app.cli:lint"
format = "app.cli:format"
typecheck = "app.cli:typecheck"
test = "app.cli:test"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.pytest.ini_options]
addopts = "-q --cov=src --cov-report=term-missing --cov-report=xml --cov-fail-under=100"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
